# ia-devs-cesar

modulo-1/gerador-requisitos/: .env.example  .gitignore  README.md  gerar_validar_docs.py  prompt_gerar_docs.md  prompt_validar_docs.md  pyproject.toml  requirements.txt
